# GamesBench

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCH_MATURITY_PLAN.md  CLAUDE.md  README.md  REVIEW.md  REVIEW_EVAL_ECOSYSTEM.md  architecture.md  config.json  development_design.md  easy_spec_guideline.md  main.py  pyproject.toml  standard_spec_guidelines.md
.claude/: settings.local.json
.github/workflows/: publish-site-data.yml
configs/: agentic_v1.json  easy_v1.json  hanoi.json  models_openrouter.example.json  sokoban.json  sokoban_procgen.json  standard_v1.json
examples/: __init__.py  hanoi_batch_benchmark.py  hanoi_manual_tool_loop.py  hanoi_openai_tool_calling.py  hanoi_provider_benchmark.py  hanoi_render_recording.py  hanoi_review_run.py  hanoi_rl.py  hanoi_tool_calling.py
games_bench/: __init__.py  config.py  hanoi.py  vision.py
scripts/: run_easy_v1_codex_high_all_models.sh
tests/: __init__.py  test_batch_cli.py  test_checkpoint_recovery.py  test_checkpoint_resume.py  test_cli_smoke.py  test_compare_cli.py  test_compare_fixtures.py  test_config.py  test_executor.py  test_failure_taxonomy.py  test_hanoi.py  test_hanoi_adapter.py  test_hanoi_batch.py  test_hanoi_vision.py  test_harness.py  test_lineage.py  test_providers.py  test_publish_cli.py  test_raw_generations.py  test_recording.py  test_registry.py  test_render_review_paths.py  test_score_cli.py  test_sokoban.py  test_sokoban_adapter.py  test_sokoban_batch.py  test_sokoban_governance.py  test_sokoban_procgen.py  test_sokoban_render_review.py  test_sokoban_vision.py
(+74 files in other folders)
